2007-10-19  Tim-Philipp Müller  <tim at centricular dot net>

	* NEWS:
	* src/gnet.c:
	* src/inetaddr.c:
	* configure.ac:
	  Remove fork()-and-pipe-based fallback for asynchronous DNS lookups,
	  which was used when GLib has been compiled without support for
	  threading, ie. G_THREADS_ENABLED was not defined.  This code is
	  unused in practice, pointless and I simply don't want to maintain it.
	  Also, it's 2007.  Besides, getting rid of this cruft might make it
	  a bit easier for someone to implement a non-thread async dns variant.
	  Lastly, fixes some cases where we didn't lock or free mutexes because
	  we checked against a non-existant G_THREADS_ENABLES define.

2007-10-17  Tim-Philipp Müller  <tim at centricular dot net>

	* src/gnet-private.h:
	* src/inetaddr.c:
	  Do refcounting of GInetAddr structures atomically. Not that
	  that is particularly useful given how the API isn't thread-safe,
	  but it can't hurt either.

2007-10-16  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/check/gnetcheck.c:
	* tests/check/gnetcheck.h:
	  Support running only specific checks of a unit test
	  via the GNET_CHECKS environment variable (specify
	  test case function names, comma-separated).

2007-10-16  Tim-Philipp Müller  <tim at centricular dot net>

	* NEWS:
	* src/conn-http.c:
	  Fix parsing of POST method response if the server returns
	  optional headers after the initial 100-Continue response.
	  Should fix #459895.

	* tests/check/gnet/gnetconnhttp.c:
	  Add unit test for the above.

2007-08-12  Tim-Philipp Müller  <tim at centricular dot net>

	* MAINTAINERS:
	  Obscure e-mail addresses with spaces only, as suggested on
	  desktop-devel.

2007-08-09  Tim-Philipp Müller  <tim at centricular dot net>

	* MAINTAINERS:
	  Format maintainers file as requested by the sysadmins on
	  the gnome devel-announce mailing list.

2007-08-08  Tim-Philipp Müller  <tim at centricular dot net>

	* examples/xmlrpc/Makefile.am: