@@ -1,3 +1,8 @@
+2007-10-23  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* src/inetaddr.c:
+	  Remove some now-unused structure members (of privat structure).
+
 2007-10-19  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* NEWS:
